test/e2e/pass/runtime/runtime_block_dynamic_call.cst
fn add(a: num, b: num) -> num {
    a + b
}

runtime fn source() -> num {
    1
}

fn main() {
    let value: runtime num = runtime { add(source(), source()) };
    let _ = value;
}
