test/e2e/fail_compile/type_errors/ct_required_forwarded_local.cst
runtime fn source() -> num { 1 }

fn reserve(count: !runtime num) -> num {
    count
}

fn wrap(count: num) -> num {
    let forwarded = count;
    reserve(forwarded)
}

fn main() -> runtime num {
    wrap(source())
}
